--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "@fortawesome/fontawesome-free/css/all.min.css";
+
+.fa-star {
+    color: rgb(235, 199, 0);
+
+}
